Version 1.11.0+svn:
 * Campaigns:
   * Under the Burning Suns:
     * Keep a spawned unit from disappearing on reload in scenario 6b
 * Language and i18n:
   * Updated translations:
 * Miscellaneous and bug fixes:
   * Fix invalid memory access crash resulting from deleting all saved games
     in the Load Game dialog

Version 1.11.0:
 * Add-ons client:
   * The Update Add-ons dialog has been replaced with an alternate view mode
     for the main Add-ons Manager
   * The Add-ons Manager now allows filtering add-ons by installation status
     (all, installed, not installed, upgradable)
   * Add-ons in the Add-ons Manager are initially sorted by title instead of
     the order they were originally uploaded to the server
   * Add-ons with broken/unavailable dependencies are reported to the user
   * The add-on dependencies prompt reports all recursively-resolved
     dependencies, not just the direct dependencies
   * Add-on installation, upgradability, and publish status is reported as a
     footnote for every list entry, plus a field in the Description dialog
   * The Add-ons Manager filter textbox is preserved during the same
     connection (i.e. while installing multiple add-ons)
 * Add-ons server:
   * Reject add-ons with names or titles that begin with a WML text format
     markup character (any of *, `, ~, {, ^, }, |, @, #, <, &)
   * Switched to port 15006 for 1.11.x and adjusted all tools to this port
 * AI:
   * In akihara_recruitment, analyzing battle field - we take village as
     important spot. The aim of it is to list terrain couple according to these
     important spot so we can evaluate battle simulation on them.
   * In akihara_recruitment, the struct situation became a class.
   * New AI formula 'aki_eval' for testing a battle evaluation
   * AI now properly considers the expected damage from poison when attacking
     using poisoners.
   * Adding a new scenario for the ai-arena-small in order to test the new AI.