@@ -11,6 +11,9 @@ Version 1.11.0+svn:
    * New translation: Ukrainian.
    * Updated translations:
 
+ * User interface:
+   * Healing animations are now played when poison is cured.
+
  * Miscellaneous and bug fixes:
    * Fix invalid memory access crash resulting from deleting all saved games
      in the Load Game dialog.
