@@ -4,6 +4,8 @@ Version 1.11.0+svn:
      * Keep a spawned unit from disappearing on reload in scenario 6b
  * Language and i18n:
    * Updated translations:
+ * User interface:
+   * Healing animations are now played when poison is cured.
  * Miscellaneous and bug fixes:
    * Fix invalid memory access crash resulting from deleting all saved games
      in the Load Game dialog
